Build files Application

--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -7,8 +7,29 @@ filegroup(
 )
 
 cc_library(
+    name = "habitify_frontend",
+    srcs = [
+        "imgui_frontend.cpp",
+        "layer_stack.cpp",
+    ],
+    hdrs = [
+        "imgui_frontend.h",
+        "layer_stack.h",
+        "layer.h",
+    ],
+    visibility = ["//src/core/habitify_core:__pkg__"],
+)
+
+cc_library(
     name = "habitify_core",
-    srcs = ["application.cpp"],
-    hdrs = ["application.h"],
+    srcs = [
+        "application.cpp",
+    ],
+    hdrs = [
+        "application.h",
+    ],
+    deps = [
+        ":habitify_frontend"
+    ],
     visibility = ["//visibility:public"],
 )
