Run ImGui in separate thread

--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -17,6 +17,10 @@ cc_library(
         "layer_stack.h",
         "layer.h",
     ],
+    deps = [
+        "@glfw//:glfw",
+        "@imgui//:imgui"
+    ],
     visibility = ["//src/core/habitify_core:__pkg__"],
 )
 
@@ -27,6 +31,7 @@ cc_library(
     ],
     hdrs = [
         "application.h",
+        "error_handler.h"
     ],
     deps = [
         ":habitify_frontend"
