--- a/.github/workflows/bazel_ci.yml
+++ b/.github/workflows/bazel_ci.yml
@@ -25,6 +25,9 @@ jobs:
       # the rest of the steps
       - uses: actions/checkout@v2
 
+      - name: Initialize submodules
+        run: git submodule update --init --recursive
+
       # build
       - name: Build the code
         run: bazel build :Habitify
