--- a/.github/workflows/bazel_build.yml
+++ b/.github/workflows/bazel_build.yml
@@ -25,18 +25,23 @@ jobs:
       # the rest of the steps
       - uses: actions/checkout@v2
 
-      - name: Check if submodules were already cached
-        id: check_cache
-        run: echo "::set-output name=cached::$(test -d third_party/)"
-
-      - name: Initialize submodules if not cached
-        run: |
-          if [ "$(steps.check_cache.outputs.cached)" == "false" ]; then
-            git submodule update --init --recursive
-          else
-            git submodule update --remote --merge
-          fi
-
+      - name: Cache Submodules
+        id: submodule-cache
+        uses: actions/cache@v2
+        env:
+          cache-name: submodules-cache
+        with:
+          path: |
+            third_party
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ github.ref }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-development
+            
+      - if: ${{ steps.submodule-cache.outputs.cache-hit != 'true' }}
+        name: Install submodules
+        continue-on-error: true
+        run: git submodule update --init --recursive
+        
       - name: Install OpenGL libraries on Ubuntu
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev
