--- a/.github/workflows/bazel_build.yml
+++ b/.github/workflows/bazel_build.yml
@@ -25,25 +25,17 @@ jobs:
       # the rest of the steps
       - uses: actions/checkout@v2
 
-      - name: Check if third_party/ was already cached
+      - name: Cache third_party
         id: check_cache
         uses: actions/cache@v2
         with:
-          path: third_party/
-          key: ${{ runner.os }}-third_party_cache-${{ github.ref }}
+          path: ${{ github.workspace }}/third_party
+          key: ${{ runner.os }}-third-party-cache-${{ github.ref }}
 
-      - if: steps.check_cache.outputs.cache-hit != 'true'
-        name: Install submodules
-        run:  git submodule update --init --recursive
-
-      - name: Cache third_party/ directory
-        id: cache-third-party
-        uses: actions/cache@v2
-        with:
-          path: third_party/
-          key: ${{ runner.os }}-third_party_cache-${{ github.ref }}
-          restore-keys: |
-            ${{ runner.os }}-third_party_cache-
+      - if: steps.check_cache.outputs.cache-hit == 'false'
+        name: Init Submodules
+        run: |
+          git submodule update --init --recursive
         
       - name: Install OpenGL libraries on Ubuntu
         if: runner.os == 'Linux'
