--- a/.github/workflows/bazel_build.yml
+++ b/.github/workflows/bazel_build.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       # Caches and restores the bazelisk download directory, the bazel build directory.
       - name: Cache bazel
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: bazel-cache
         with:
@@ -23,16 +23,16 @@ jobs:
 
       # Checks-out your repository under $GITHUB_WORKSPACE, which is the CWD for
       # the rest of the steps
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Cache third_party
         id: check_cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/third_party
           key: ${{ runner.os }}-third-party-cache-${{ github.ref }}
 
-      - if: steps.check_cache.outputs.cache-hit == 'false'
+      - if: steps.check_cache.outputs.cache-hit != 'true'
         name: Init Submodules
         run: |
           git submodule update --init --recursive
