--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -7,34 +7,16 @@ filegroup(
 )
 
 cc_library(
-    name = "habitify_frontend",
-    srcs = [
-        "imgui_frontend.cpp",
-        "layer_stack.cpp",
-    ],
-    hdrs = [
-        "imgui_frontend.h",
-        "layer_stack.h",
-        "layer.h",
-    ],
-    deps = [
-        "@glfw//:glfw",
-        "@imgui//:imgui"
-    ],
-    visibility = ["//src/core/habitify_core:__pkg__"],
-)
-
-cc_library(
     name = "habitify_core",
     srcs = [
         "application.cpp",
     ],
     hdrs = [
         "application.h",
-        "error_handler.h"
-    ],
-    deps = [
-        ":habitify_frontend"
+        "error_handler.h",
     ],
     visibility = ["//visibility:public"],
+    deps = [
+        "//src/frontend:imgui_frontend",
+    ],
 )
