--- a/src/frontend/BUILD
+++ b/src/frontend/BUILD
@@ -21,6 +21,7 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":frontend_utils",
+        "//src/core/event_bus:eventbus",
         "//src/frontend/debug:debug_tools",
         "//src/frontend/ping:ping_frontend",
         "@glfw",
