--- a/test/core/event_bus/BUILD
+++ b/test/core/event_bus/BUILD
@@ -3,7 +3,10 @@ load("@rules_cc//cc:defs.bzl", "cc_test")
 cc_test(
     name = "publisher_test",
     size = "small",
-    srcs = ["publisher_test.cpp"],
+    srcs = [
+        "listener_test.cpp",
+        "publisher_test.cpp",
+    ],
     deps = [
         "//src/core/event_bus:eventbus",
         "@com_google_googletest//:gtest",
