EventBusTest + fix in ReadLatest

--- a/test/core/event_bus/BUILD
+++ b/test/core/event_bus/BUILD
@@ -1,13 +1,9 @@
 load("@rules_cc//cc:defs.bzl", "cc_test")
 
 cc_test(
-    name = "publisher_test",
+    name = "event_bus_system_test",
     size = "small",
     srcs = [
-        "listener_test.cpp",
-        "publisher_test.cpp",
-        "channel_test.cpp",
-        "event_test.cpp",
         "event_bus_system_test.cpp",
     ],
     deps = [
